--- a/README.mkd
+++ b/README.mkd
@@ -12,5 +12,51 @@ $ minikube service hello-nginx
 # criando um secret para senha do MYSQL_ROOT_PASSWORD
 $ kubectl create secret generic mysql-pass --from-literal=password='123456'
 
-$ minikube dashboard  
+# Criando um volume persistente
+$ kubectl apply -f mysql/persistent-volume.yaml
+
+
+
+
 $ minikube service
+$ minikube delete
+
+
+
+## Criando um Deploy no Minikube
+
+### Iniciando a instância
+Executar os comando para iniciar os testes e ver o status do host
+```
+$ minikube start laboratorio
+$ minikube status
+$ minikube addons enable ingress
+$ kubectl get namespaces
+```
+
+### Painel de controle
+Abre o dashboard do K8s
+```
+$ minikube dashboard
+```
+
+Executar o seguinte comandos para aplicar o deploy do nginx:
+```
+kubectl apply -f nginx/deployment.yaml
+```
+
+
+Verificar se os pods estão rodando:
+
+```
+kubectl get pods --selector app=nginx  --show-labels
+```
+Criando um service para expor os pods:
+```
+kubectl apply -f nginx/service.yaml
+```
+
+Para acessar o Load Balancer no navegador
+```
+$ minikube service nginx-service
+```
